--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <div id="recipeContainer" class="hidden">
       <!-- If no recipe yet, show: -->
       <% if(!locals.item) { %>
-      <h2>Pick your favourite taco ingredient 👆</h2>
+      <h2>Pick your favourite Taco ingredient 👆</h2>
       <% } else { %>
       <h2><%= item.name %></h2>
 
